# PuzzlePod

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Makefile  README.md  deny.toml  puzzled-dev-libvirt.yaml  puzzled-dev.yaml
.cargo/: config.toml
.claude/commands/: create-issue.md  triage-issue.md
.claude/skills/testing-patterns/: SKILL.md
.copr/: Makefile
.github/workflows/: agent-dispatch.yml  ci.yml  release-tag.yml  security-scan.yml
ansible/: galaxy.yml
ansible/playbooks/: deploy.yml  update-profiles.yml
bpf/: Makefile  exec_guard.bpf.c  exec_guard.h
ci/: Containerfile
config/: puzzled.conf.example
crates/puzzle-hook/: Cargo.toml
crates/puzzle-hook/src/: main.rs
crates/puzzle-init/: Cargo.toml
crates/puzzle-init/src/: main.rs
crates/puzzle-phase2-demo/: Cargo.toml
crates/puzzle-phase2-demo/src/: main.rs
crates/puzzle-proxy/: Cargo.toml
crates/puzzle-proxy/src/: credential_backends.rs  credential_persistence.rs  credentials.rs  dlp.rs  geo.rs  handler.rs  lib.rs  replay.rs  secure_memory.rs  systemd_creds_backend.rs  tls.rs
crates/puzzle-proxy/tests/: handler_tests.rs
crates/puzzle-sandbox-demo/: Cargo.toml
crates/puzzle-sandbox-demo/src/: main.rs
crates/puzzlectl/: Cargo.toml
crates/puzzlectl/src/: client.rs  compliance.rs  lib.rs  main.rs  tui.rs
crates/puzzlectl/src/sim/: batch.rs  completer.rs  engine.rs  mod.rs  repl.rs  report.rs  scenario.rs
crates/puzzlectl/src/tui/: app.rs  clipboard.rs  event.rs  mod.rs  theme.rs
crates/puzzlectl/src/tui/ui/: audit_log.rs  branch_detail.rs  branch_draft.rs  branch_logs.rs  branch_policy.rs  branch_settings.rs  branches.rs  create_branch.rs  create_credential.rs  credentials.rs  daemon_settings.rs  daemon_status.rs  dashboard.rs  mod.rs  splash.rs
crates/puzzled/: Cargo.toml
crates/puzzled-types/: Cargo.toml
crates/puzzled-types/src/: lib.rs
crates/puzzled/benches/: branch.rs  diff.rs  policy.rs  wal.rs
crates/puzzled/src/: attestation.rs  audit.rs  audit_store.rs  branch.rs  budget.rs  commit.rs  config.rs  conflict.rs  dbus.rs  diff.rs  error.rs  identity.rs  ima.rs  landlock_rules.rs  lib.rs  main.rs  metrics.rs  policy.rs  profile.rs  provenance.rs  seccomp_handler.rs  seccomp_profile.rs  test_helpers.rs  trust.rs  wal.rs
crates/puzzled/tests/: bpf_lsm_hooks.rs  branch_lifecycle.rs  concurrent_branches.rs  crash_recovery.rs  (+21 more)
dbus/: org.lobstertrap.PuzzlePod1.Manager.xml  org.lobstertrap.PuzzlePod1.conf
demo/: SANDBOX-DEMO-GUIDE.md  e2e_governance_demo.sh  run_demo_phase1.sh  run_demo_phase2.sh  run_demo_rootless.sh  run_demo_tui.sh  sandbox-live-demo.sh
demo/sample_changesets/: concurrent_branch_a.json  concurrent_branch_b.json  credential_theft.json  kernel_sabotage.json  malicious_changeset.json  safe_changeset.json
docs/: Kernel_vs_userspace.md  PRD.md  admin-guide.md  demo-guide.md  developer-guide.md  gcp-setup.md  k8s_sandbox_vs_puzzlepod.md  podman_puzzled_architecture.md  profile-authoring-guide.md  rogue-agent-test-report.md  security-guide.md  technical-design.md
docs/compliance/: fedramp.md  iso27001.md  soc2.md
docs/debug/: lima-vm-fanotify-tests.md  lima-vm-integration-tests.md  sandbox-child-process.md
docs/diagrams/: 01-system-architecture.drawio  02-fork-explore-commit.drawio  03-seccomp-two-tier.drawio  04-network-gating-flow.drawio  05-budget-escalation.drawio  06-defense-in-depth.drawio
examples/scenarios/: credential_leak.yaml  exec_attempt.yaml  mixed_safe_and_sensitive.yaml  multi_file_refactor.yaml  network_exfiltration.yaml  persistence_attack.yaml  safe_code_edit.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_diff_changeset.rs  fuzz_policy_input.rs  fuzz_profile_yaml.rs
man/: puzzlectl.1  puzzled.8  puzzled.conf.5  puzzlepod-profile.5
packaging/: build-srpm.sh  puzzle-podman.spec  puzzlectl.spec  puzzled-policies.spec  puzzled-profiles.spec  puzzled.spec  puzzlepod-selinux.spec  puzzlepod.spec
podman/: puzzle-podman
podman/hooks/: puzzle-branch-hook.sh  puzzle-branch.json  puzzlepod.json
podman/quadlet/: code-assistant.container  example.container  puzzlepod-agent.container  safety-critical.container
policies/dlp/: default_rules.yaml
policies/profiles/: api-tester.yaml  backup-agent.yaml  ci-runner.yaml  code-assistant.yaml  code-reviewer.yaml  container-builder.yaml  data-analyst.yaml  database-admin.yaml  devops-automation.yaml  document-processor.yaml  edge-minimal.yaml  git-operations.yaml  infrastructure-auditor.yaml  log-analyzer.yaml  ml-training.yaml  monitoring-agent.yaml  privileged.yaml  restricted.yaml  safety-critical.yaml  security-scanner.yaml  standard.yaml  test-inherit.yaml  test-runner.yaml  web-scraper.yaml
policies/rules/: commit.rego
policies/schemas/: profile.schema.json
scripts/: audit-deps.sh  copr-build.sh  demo_attestation.sh  dev-setup-user.sh  dev-setup.sh  entrypoint.sh  libvirt-dev.sh  lima-dev.sh  run_all_tests.sh
selinux/: Makefile  puzzlepod.fc  puzzlepod.if  puzzlepod.te
skills/: adversarial-qe.md  engineer.md  process.md
summit-demo/: Containerfile.bad-agent  README.md  bad-agent.py  demo-attestation.sh  demo-governed.sh  demo-ungoverned.sh  setup-laptop1-fedora.sh  setup-laptop2-ubuntu.sh
summit-demo/profiles/: summit-demo.yaml
systemd/: puzzle.slice  puzzle@.service  puzzled-user.service  puzzled.service
tests/performance/: bench.sh
tests/security/: helpers.sh  run_all.sh  run_rogue_agent.sh  test_bpf_bypass.sh  test_cgroup_escape.sh  test_escape_vectors.sh  test_fanotify_bypass.sh  test_landlock_bypass.sh  test_network_escape.sh  test_policy_bypass.sh  test_privilege_escalation.sh  test_rogue_agent.sh  test_sandbox_escape.sh  test_seccomp_bypass.sh
(+23 files in other folders)
