[package]
name = "puzzled-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
puzzled = { path = "../crates/puzzled" }
puzzled-types = { path = "../crates/puzzled-types" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_profile_yaml"
path = "fuzz_targets/fuzz_profile_yaml.rs"
doc = false

[[bin]]
name = "fuzz_policy_input"
path = "fuzz_targets/fuzz_policy_input.rs"
doc = false

[[bin]]
name = "fuzz_diff_changeset"
path = "fuzz_targets/fuzz_diff_changeset.rs"
doc = false
